Version 3.3.1 (11.06.2018)

* Bugfix for field detection issues with card simulator


Version 3.3.0 (15.05.2018)

* ICAO TR Part 3 test case LDS_I_04 removed
* Several script fixes for BSI 5.2 TS_Sig test cases
* TS_eID_4.2.1* and TS_eID_5.3.1 - fixes for PACE failing with 6F00
* Correct modification of personalization trust points after certificate generation for reader tests
* BSI 5.1: DG2 JPG and JPG2000 image size corrected in datagroups
* Fix for randomly occuring invalid signature generation during certificate generation for BSI part 3.2 tests
* Migration of several test cases to PersoSim (mainly PACE-DH)
* Improvements in the handling of forced key references for CA for chip tests
* Support for reading data groups needing up to 5 length bytes in their TLV structure

* Code maintenance


Version 3.2.3 (12.09.2017)

*Fixes in testcases
* ISO_K_19 - Active Authentication with long keys</li>
* ISO_B_10 - CRL missing in dialog</li>
* 7816_B_41 - do not access DG14 on BAC only Pass</li>
* ISO_G_38 - wrong access conditions on DG 14</li>
* LDS_E_3&4 - Checking of DG14 fails for certain (DH) cases</li>
* TR03105 part 5.2 - 3DES in TS_PACE* and TS_EID</li>
* ISO7816_E_07 - does not display certificates</li>

* Several bugfixes
* GT blocks acces to card readers
* Return for invalid paths in TestControl

Version 3.2.2 (12.06.2017)

* Migration to PersoSim
* Implemented TAv1and AA on PersoSim
* Migration ISO_E_* testcases to use PersoSim
* Migration ISO7816_F_* testcases to use PersoSim
* Include PersoSim log messages in GT test logfiles

* Fixes in testcases
* ISO_G16,17,21,22  added
* TR03105 part 5.2 - Contents of user dialog unified/fixed
* ISO7816_G_07 fixed for proprietary domain parameters
* ISO_P73-75 fixed checks for SecInfo combinations
* TR03105 part 5.1 - Removed misleading EACv2 SecInfos
* openePassport - use BAC as fallback for PACE
* ISO_R_05: use extended length APDU when needed for Active Authentication