@@ -7,6 +7,19 @@
 <body>
 	<h2>What's new in GlobalTester</h2>
 	
+	<h3>What's new in GlobalTester 3.3.1</h3>
+	<ul>
+		<li>Notable fixes in testcases
+		<p>
+			<ul>
+				<li>ISO7816_E_26 - Encode date of birth as String</li>
+				<li>All reader testcases - Fix issue regarding field detection</li>
+			</ul>
+		  
+		</p> </li>
+		<li>Several bugfixes</li>
+	</ul>
+	
 	<h3>What's new in GlobalTester 3.3.0</h3>
 	<ul>
 		<li>Notable fixes in testcases
