@@ -1,5 +1,6 @@
 Version 3.3.1 (11.06.2018)
 
+* ISO7816_E_26 - Encode date of birth as String
 * Bugfix for field detection issues with card simulator
 
 
